Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjObjectField.quorum
class Main
    Object v
    action Main
        v:SetValue()
        Test(v)
    end

    action Test(Number var)
    end
end
